--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
       <div class="container">
         <div class="row gy-4 d-flex justify-content-between">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h2 data-aos="fade-up">Your Lightning Fast Delivery Partner</h2>
-            <p data-aos="fade-up" data-aos-delay="100">Facere distinctio molestiae nisi fugit tenetur repellat non praesentium nesciunt optio quis sit odio nemo quisquam. eius quos reiciendis eum vel eum voluptatem eum maiores eaque id optio ullam occaecati odio est possimus vel reprehenderit</p>
+            <h2 data-aos="fade-up">Keluarga Insan Statistik Teladan 2024</h2>
+            <p data-aos="fade-up" data-aos-delay="100">Rekam jejak dan kenangan perjuangan Para Insan Statistik Teladan BPS se-Indonesia, Angkatan Tahun 2024</p>
 
             <form action="#" class="form-search d-flex align-items-stretch mb-3" data-aos="fade-up" data-aos-delay="200">
-              <input type="text" class="form-control" placeholder="Your ZIP code or City. e.g. New York">
+              <input type="text" class="form-control" placeholder="Masih template dasar">
               <button type="submit" class="btn btn-primary">Search</button>
             </form>
 
@@ -85,8 +85,8 @@
 
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
-                  <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="0" class="purecounter">232</span>
-                  <p>Clients</p>
+                  <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="0" class="purecounter">41</span>
+                  <p>IST</p>
                 </div>
               </div><!-- End Stats Item -->
 
