--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="icon flex-shrink-0"><i class="fa-solid fa-cart-flatbed"></i></div>
             <div>
               <h4 class="title">Tahap 1</h4>
-              <p class="description">Pemilihan IST Satker oleh para pegawai di IST nya</p>
+              <p class="description">Pemilihan IST Satker oleh para pegawai di setiap satker.</p>
               <a href="https://simpeg.bps.go.id/pegawai-teladan/" class="readmore stretched-link"><span>Learn
                   More</span><i class="bi bi-arrow-right"></i></a>
             </div>
@@ -154,7 +154,8 @@
             <div class="icon flex-shrink-0"><i class="fa-solid fa-truck"></i></div>
             <div>
               <h4 class="title">Tahap 2</h4>
-              <p class="description">Pemilihan IST untuk mewakili kesestamaan, setiap kedeputian dan setiap provinsi</p>
+              <p class="description">Pemilihan IST untuk mewakili kesestamaan, setiap kedeputian, inspektorat, dan
+                setiap provinsi.</p>
               <a href="https://simpeg.bps.go.id/pegawai-teladan/" class="readmore stretched-link"><span>Learn
                   More</span><i class="bi bi-arrow-right"></i></a>
             </div>
@@ -164,7 +165,7 @@
             <div class="icon flex-shrink-0"><i class="fa-solid fa-truck-ramp-box"></i></div>
             <div>
               <h4 class="title">Tahap 3</h4>
-              <p class="description">Pemilihan IST Nasional</p>
+              <p class="description">Pemilihan IST Nasional.</p>
               <a href="https://simpeg.bps.go.id/pegawai-teladan/" class="readmore stretched-link"><span>Learn
                   More</span><i class="bi bi-arrow-right"></i></a>
             </div>
@@ -174,7 +175,8 @@
         <br />
         <h2>Para IST 2024 Tahap 3</h2>
         <br />
-        <table data-aos="fade-up" class="table table-dark table-striped table-borderless table-hover table-responsive">
+        <table data-aos="fade-up"
+          class="table table-primary table-striped table-borderless table-hover table-responsive">
           <tr>
             <td>1</td>
             <td>Dr. Eng. Lya Hulliyyatus Suadaa, SST., M.T.</td>
@@ -399,7 +401,7 @@
             <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
           </div> -->
 
-          <div class="col-lg-6 content order-last  order-lg-first" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-12 content order-last  order-lg-first" data-aos="fade-up" data-aos-delay="100">
             <h3>Rencana Aksi</h3>
             <p>
               Setiap Insan Statistik Teladan memiliki Rencana Aksi yang akan dikerjakan dalam periode 6 bulan. Rencana
@@ -408,26 +410,308 @@
             </p>
             <ul>
               <li>
-                <i class="bi bi-diagram-3"></i>
+                <i>1</i>
                 <div>
-                  <h5>Ullamco laboris nisi ut aliquip consequat</h5>
-                  <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
+                  <h5><a href='assets/renaksi/1.pdf' target='_blank'>Program Talent Pool Big Data & Data Science di
+                      Regional Hub on Big Data and Data Science for Asia and The Pacific</a></h5>
+                  <p>Dr. Eng. Lya Hulliyyatus Suadaa, SST., M.T.</p>
                 </div>
               </li>
               <li>
-                <i class="bi bi-fullscreen-exit"></i>
+                <i>2</i>
                 <div>
-                  <h5>Magnam soluta odio exercitationem reprehenderi</h5>
-                  <p>Quo totam dolorum at pariatur aut distinctio dolorum laudantium illo direna pasata redi</p>
+                  <h5><a href='assets/renaksi/2.pdf' target='_blank'>Insan Statistik BerAKHLAK untuk pembinaan statistik
+                      sektoral dan pelayanan publik yang lebih baik dan berkualitas.</a></h5>
+                  <p>Della Hardyati Prabowo, SST, M.E.</p>
                 </div>
               </li>
               <li>
-                <i class="bi bi-broadcast"></i>
+                <i>3</i>
                 <div>
-                  <h5>Voluptatem et qui exercitationem</h5>
-                  <p>Et velit et eos maiores est tempora et quos dolorem autem tempora incidunt maxime veniam</p>
+                  <h5><a href='assets/renaksi/3.pdf' target='_blank'>ThinkTank BPS: Ekosistem belajar oleh pegawai
+                      BPS dari pegawai BPS, untuk
+                      Kemajuan Indonesia</a></h5>
+                  <p>Suryo Adi Rakhmawan, SST, M.Sc.</p>
                 </div>
               </li>
+              <li>
+                <i>4</i>
+                <div>
+                  <h5><a href='assets/renaksi/4.pdf' target='_blank'>Innovation through Collaboration: Data Pertanian
+                      Berbasis Client Oriented</a></h5>
+                  <p>Ratna Rizki Amalia, SST, M.E.</p>
+                </div>
+              </li>
+              <li>
+                <i>5</i>
+                <div>
+                  <h5><a href='assets/renaksi/5.pdf' target='_blank'>GENIUS: Global Education and Network for
+                      Information Utilization and Sharing</a></h5>
+                  <p>Karmila Maharani, SST, M.E.</p>
+                </div>
+              </li>
+              <li>
+                <i>6</i>
+                <div>
+                  <h5><a href='assets/renaksi/6.pdf' target='_blank'>DARING: Dashboard Early Warning SE2026</a></h5>
+                  <p>Ema Tusianti, SST, SAB, M.T., M.Sc</p>
+                </div>
+              </li>
+              <li>
+                <i>7</i>
+                <div>
+                  <h5><a href='assets/renaksi/7.pdf' target='_blank'>xxx</a></h5>
+                  <p>Husaini, SST, M.Acc </p>
+                </div>
+              </li>
+              <li>
+                <i>8</i>
+                <div>
+                  <h5><a href='assets/renaksi/8.pdf' target='_blank'>xxx</a></h5>
+                  <p>Kusni Rohani Rumahorbo, SST, M.Si</p>
+                </div>
+              </li>
+              <li>
+                <i>9</i>
+                <div>
+                  <h5><a href='assets/renaksi/9.pdf' target='_blank'>xxx</a></h5>
+                  <p>Deo Peter Surbakti, SST, M.Sc.</p>
+                </div>
+              </li>
+              <li>
+                <i>10</i>
+                <div>
+                  <h5><a href='assets/renaksi/10.pdf' target='_blank'>xxx</a></h5>
+                  <p>Benny Firmansyah, SST, M.T.</p>
+                </div>
+              </li>
+              <li>
+                <i>11</i>
+                <div>
+                  <h5><a href='assets/renaksi/11.pdf' target='_blank'>xxx</a></h5>
+                  <p>Debi Tomika, SST</p>
+                </div>
+              </li>
+              <li>
+                <i>12</i>
+                <div>
+                  <h5><a href='assets/renaksi/12.pdf' target='_blank'>xxx</a></h5>
+                  <p>Boy Ampristi, S.Tr.Stat.</p>
+                </div>
+              </li>
+              <li>
+                <i>13</i>
+                <div>
+                  <h5><a href='assets/renaksi/13.pdf' target='_blank'>MIRACLES : Media of Inspiration, Creation, and
+                      Collaboration for Employees, dirincikan dalam 3 aksi:
+                      1. RABUKU: Rabu Baca Buku
+                      2. KOPI SANTAI: Kolom Opini dan Tulisan Populer Tiap Pegawai
+                      3. SIPIRAL: Sistem Informasi Pembinaan Statistik Sektoral</a></h5>
+                  <p>Etika Suryandari, S.Si., M.T.</p>
+                </div>
+              </li>
+              <li>
+                <i>14</i>
+                <div>
+                  <h5><a href='assets/renaksi/14.pdf' target='_blank'>DATACAP: Dashboard Data Indonesia untuk Percepatan
+                      Pembangunan dan Pemerataan Kecerdasan Bangsa</a></h5>
+                  <p>Nofriani, SST</p>
+                </div>
+              </li>
+              <li>
+                <i>15</i>
+                <div>
+                  <h5><a href='assets/renaksi/15.pdf' target='_blank'>xxx</a></h5>
+                  <p>Siectio Dicko Pratama, SST., M.Sc.</p>
+                </div>
+              </li>
+              <li>
+                <i>16</i>
+                <div>
+                  <h5><a href='assets/renaksi/16.pdf' target='_blank'>xxx</a></h5>
+                  <p>Rengga Firmandika, SST</p>
+                </div>
+              </li>
+              <li>
+                <i>17</i>
+                <div>
+                  <h5><a href='assets/renaksi/17.pdf' target='_blank'>xxx</a></h5>
+                  <p>Resa Surya Utama, SST, M.E</p>
+                </div>
+              </li>
+              <li>
+                <i>18</i>
+                <div>
+                  <h5><a href='assets/renaksi/18.pdf' target='_blank'>xxx</a></h5>
+                  <p>Mutiara Virgia Leran Putri, SST</p>
+                </div>
+              </li>
+              <li>
+                <i>19</i>
+                <div>
+                  <h5><a href='assets/renaksi/19.pdf' target='_blank'>xxx</a></h5>
+                  <p>Andri Saleh, S.Si, M.I.Kom.</p>
+                </div>
+              </li>
+              <li>
+                <i>20</i>
+                <div>
+                  <h5><a href='assets/renaksi/20.pdf' target='_blank'>PEMAIN BERKELAS (PEMIRSA SDGs Semakin Tenar,
+                      Berkelanjutan, dan Bermanfaat Luas)</a></h5>
+                  <p>Hermawan Prasetyo, SST, MT.</p>
+                </div>
+              </li>
+              <li>
+                <i>21</i>
+                <div>
+                  <h5><a href='assets/renaksi/21.pdf' target='_blank'>PST Plus (Pelayanan Statistik Sektoral yang
+                      customizeable)</a></h5>
+                  <p>Betik Endaryati, SST</p>
+                </div>
+              </li>
+              <li>
+                <i>22</i>
+                <div>
+                  <h5><a href='assets/renaksi/22.pdf' target='_blank'>xxx</a></h5>
+                  <p>La Ode Ahmad Arafat, S.ST</p>
+                </div>
+              </li>
+              <li>
+                <i>23</i>
+                <div>
+                  <h5><a href='assets/renaksi/23.pdf' target='_blank'>xxx</a></h5>
+                  <p>Nur'izzah Inayati, SST, M.T </p>
+                </div>
+              </li>
+              <li>
+                <i>24</i>
+                <div>
+                  <h5><a href='assets/renaksi/24.pdf' target='_blank'>xxx</a></h5>
+                  <p>I Gede Heprin Prayasta, SST., M.Si.</p>
+                </div>
+              </li>
+              <li>
+                <i>25</i>
+                <div>
+                  <h5><a href='assets/renaksi/25.pdf' target='_blank'>xxx</a></h5>
+                  <p>Gede Aditya Yoga Sulaksana, SST</p>
+                </div>
+              </li>
+              <li>
+                <i>26</i>
+                <div>
+                  <h5><a href='assets/renaksi/26.pdf' target='_blank'>xxx</a></h5>
+                  <p>Yuliana Kurniawati Dima, S.Si, M.AP</p>
+                </div>
+              </li>
+              <li>
+                <i>27</i>
+                <div>
+                  <h5><a href='assets/renaksi/27.pdf' target='_blank'>xxx</a></h5>
+                  <p>Yostryan Chenata, SST </p>
+                </div>
+              </li>
+              <li>
+                <i>28</i>
+                <div>
+                  <h5><a href='assets/renaksi/28.pdf' target='_blank'>IDOLA: Integrated Dashboard Monitoring Pengolahan
+                      Data</a></h5>
+                  <p>Aulia Fadyati Amini, SST</p>
+                </div>
+              </li>
+              <li>
+                <i>29</i>
+                <div>
+                  <h5><a href='assets/renaksi/29.pdf' target='_blank'>xxx</a></h5>
+                  <p>Hakiki Sandhika Raja, S.Tr.Stat.</p>
+                </div>
+              </li>
+              <li>
+                <i>30</i>
+                <div>
+                  <h5><a href='assets/renaksi/30.pdf' target='_blank'>xxx</a></h5>
+                  <p>Siswandi, S.E, M.M.</p>
+                </div>
+              </li>
+              <li>
+                <i>31</i>
+                <div>
+                  <h5><a href='assets/renaksi/31.pdf' target='_blank'>xxx</a></h5>
+                  <p>Muhammad Nurul Alam Hasyim, SST</p>
+                </div>
+              </li>
+              <li>
+                <i>32</i>
+                <div>
+                  <h5><a href='assets/renaksi/32.pdf' target='_blank'>xxx</a></h5>
+                  <p>Randy Pratama Lumenta, SST, M.A.P</p>
+                </div>
+              </li>
+              <li>
+                <i>33</i>
+                <div>
+                  <h5><a href='assets/renaksi/33.pdf' target='_blank'>xxx</a></h5>
+                  <p>A.A. Ngurah Gede Wasudewa, SST, M.URP.</p>
+                </div>
+              </li>
+              <li>
+                <i>34</i>
+                <div>
+                  <h5><a href='assets/renaksi/34.pdf' target='_blank'>xxx</a></h5>
+                  <p>Rais, SST, M.Si.</p>
+                </div>
+              </li>
+              <li>
+                <i>35</i>
+                <div>
+                  <h5><a href='assets/renaksi/35.pdf' target='_blank'>xxx</a></h5>
+                  <p>Ma'ruf, S.P</p>
+                </div>
+              </li>
+              <li>
+                <i>36</i>
+                <div>
+                  <h5><a href='assets/renaksi/36.pdf' target='_blank'>Es Jambu Manis (Eskalasi Manajemen Buku Tamu:
+                      Pemantapan Sistem)</a></h5>
+                  <p>Khumaidi Subkhi, S.Tr.Stat.</p>
+                </div>
+              </li>
+              <li>
+                <i>37</i>
+                <div>
+                  <h5><a href='assets/renaksi/37.pdf' target='_blank'>xxx</a></h5>
+                  <p>Andra Citta Passadhi Arya, SST, M.Stat</p>
+                </div>
+              </li>
+              <li>
+                <i>38</i>
+                <div>
+                  <h5><a href='assets/renaksi/38.pdf' target='_blank'>xxx</a></h5>
+                  <p>Lien Pattimukay, S.Si</p>
+                </div>
+              </li>
+              <li>
+                <i>39</i>
+                <div>
+                  <h5><a href='assets/renaksi/39.pdf' target='_blank'>xxx</a></h5>
+                  <p>Habibullah Malik Ali Hadikusuma K, SST, M.E.</p>
+                </div>
+              </li>
+              <li>
+                <i>40</i>
+                <div>
+                  <h5><a href='assets/renaksi/40.pdf' target='_blank'>xxx</a></h5>
+                  <p>Destrianto Mursalin, SST</p>
+                </div>
+              </li>
+              <li>
+                <i>41</i>
+                <div>
+                  <h5><a href='assets/renaksi/41.pdf' target='_blank'>xxx</a></h5>
+                  <p>Anis Khoirun Nisak, SST</p>
+                </div>
+              </li>
+
             </ul>
           </div>
         </div>
