--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
+          <li><a href="#featured-services">Portofolio</a></li>          
           <li><a href="#about">Rencana Aksi</a></li>
-          <li><a href="#services">Rumah Ide</a></li>
           <li><a href="#pricing">Video IST</a></li>
+          <li><a href="#services">Rumah Ide</a></li>          
           <li><a href="#faq">Gallery</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -177,211 +178,262 @@
         <br />
         <table data-aos="fade-up"
           class="table table-primary table-striped table-borderless table-hover table-responsive">
-          <tr>
-            <td>1</td>
-            <td>Dr. Eng. Lya Hulliyyatus Suadaa, SST., M.T.</td>
-            <td>Sekretariat Utama</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Della Hardyati Prabowo, SST, M.E.</td>
-            <td>Kedeputian Bidang Metodologi dan Informasi Statistik</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Suryo Adi Rakhmawan, SST, M.Sc.</td>
-            <td>Kedeputian Bidang Statistik Sosial</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Ratna Rizki Amalia, SST, M.E.</td>
-            <td>Kedeputian Bidang Statistik Produksi</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>Karmila Maharani, SST, M.E.</td>
-            <td>Kedeputian Bidang Statistik Distribusi dan Jasa</td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>Ema Tusianti, SST, SAB, M.T., M.Sc</td>
-            <td>Kedeputian Bidang Neraca dan Analisis Statistik</td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td>Husaini, SST, M.Acc </td>
-            <td>Inspektorat Utama </td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td>Kusni Rohani Rumahorbo, SST, M.Si</td>
-            <td>Provinsi Aceh</td>
-          </tr>
-          <tr>
-            <td>9</td>
-            <td>Deo Peter Surbakti, SST, M.Sc.</td>
-            <td>Provinsi Sumatera Utara</td>
-          </tr>
-          <tr>
-            <td>10</td>
-            <td>Benny Firmansyah, SST, M.T.</td>
-            <td>Provinsi Sumatera Barat</td>
-          </tr>
-          <tr>
-            <td>11</td>
-            <td>Debi Tomika, SST</td>
-            <td>Provinsi Riau</td>
-          </tr>
-          <tr>
-            <td>12</td>
-            <td>Boy Ampristi, S.Tr.Stat.</td>
-            <td>Provinsi Jambi</td>
-          </tr>
-          <tr>
-            <td>13</td>
-            <td>Etika Suryandari, S.Si., M.T.</td>
-            <td>Provinsi Sumatera Selatan</td>
-          </tr>
-          <tr>
-            <td>14</td>
-            <td>Nofriani, SST</td>
-            <td>Provinsi Bengkulu</td>
-          </tr>
-          <tr>
-            <td>15</td>
-            <td>Siectio Dicko Pratama, SST., M.Sc.</td>
-            <td>Provinsi Lampung</td>
-          </tr>
-          <tr>
-            <td>16</td>
-            <td>Rengga Firmandika, SST</td>
-            <td>Provinsi Kep. Bangka Belitung </td>
-          </tr>
-          <tr>
-            <td>17</td>
-            <td>Resa Surya Utama, SST, M.E</td>
-            <td>Provinsi Kepulauan Riau</td>
-          </tr>
-          <tr>
-            <td>18</td>
-            <td>Mutiara Virgia Leran Putri, SST</td>
-            <td>Provinsi DKI Jakarta</td>
-          </tr>
-          <tr>
-            <td>19</td>
-            <td>Andri Saleh, S.Si, M.I.Kom.</td>
-            <td>Provinsi Jawa Barat</td>
-          </tr>
-          <tr>
-            <td>20</td>
-            <td>Hermawan Prasetyo, SST, MT.</td>
-            <td>Provinsi Jawa Tengah</td>
-          </tr>
-          <tr>
-            <td>21</td>
-            <td>Betik Endaryati, SST</td>
-            <td>Provinsi DI Yogyakarta</td>
-          </tr>
-          <tr>
-            <td>22</td>
-            <td>La Ode Ahmad Arafat, S.ST</td>
-            <td>Provinsi Jawa Timur</td>
-          </tr>
-          <tr>
-            <td>23</td>
-            <td>Nur&#39;izzah Inayati, SST, M.T </td>
-            <td>Provinsi Banten</td>
-          </tr>
-          <tr>
-            <td>24</td>
-            <td>I Gede Heprin Prayasta, SST., M.Si.</td>
-            <td>Provinsi Bali</td>
-          </tr>
-          <tr>
-            <td>25</td>
-            <td>Gede Aditya Yoga Sulaksana, SST</td>
-            <td>Provinsi Nusa Tenggara Barat</td>
-          </tr>
-          <tr>
-            <td>26</td>
-            <td>Yuliana Kurniawati Dima, S.Si, M.AP</td>
-            <td>Provinsi Nusa Tenggara Timur</td>
-          </tr>
-          <tr>
-            <td>27</td>
-            <td>Yostryan Chenata, SST </td>
-            <td>Provinsi Kalimantan Barat</td>
-          </tr>
-          <tr>
-            <td>28</td>
-            <td>Aulia Fadyati Amini, SST</td>
-            <td>Provinsi Kalimantan Tengah</td>
-          </tr>
-          <tr>
-            <td>29</td>
-            <td>Hakiki Sandhika Raja, S.Tr.Stat.</td>
-            <td>Provinsi Kalimantan Selatan</td>
-          </tr>
-          <tr>
-            <td>30</td>
-            <td>Siswandi, S.E, M.M.</td>
-            <td>Provinsi Kalimantan Timur</td>
-          </tr>
-          <tr>
-            <td>31</td>
-            <td>Muhammad Nurul Alam Hasyim, SST</td>
-            <td>Provinsi Kalimantan Utara</td>
-          </tr>
-          <tr>
-            <td>32</td>
-            <td>Randy Pratama Lumenta, SST, M.A.P</td>
-            <td>Provinsi Sulawesi Utara</td>
-          </tr>
-          <tr>
-            <td>33</td>
-            <td>A.A. Ngurah Gede Wasudewa, SST, M.URP.</td>
-            <td>Provinsi Sulawesi Tengah</td>
-          </tr>
-          <tr>
-            <td>34</td>
-            <td>Rais, SST, M.Si.</td>
-            <td>Provinsi Sulawesi Selatan</td>
-          </tr>
-          <tr>
-            <td>35</td>
-            <td>Ma&#39;ruf, S.P</td>
-            <td>Provinsi Sulawesi Tenggara</td>
-          </tr>
-          <tr>
-            <td>36</td>
-            <td>Khumaidi Subkhi, S.Tr.Stat.</td>
-            <td>Provinsi Gorontalo</td>
-          </tr>
-          <tr>
-            <td>37</td>
-            <td>Andra Citta Passadhi Arya, SST, M.Stat</td>
-            <td>Provinsi Sulawesi Barat</td>
-          </tr>
-          <tr>
-            <td>38</td>
-            <td>Lien Pattimukay, S.Si</td>
-            <td>Provinsi Maluku</td>
-          </tr>
-          <tr>
-            <td>39</td>
-            <td>Habibullah Malik Ali Hadikusuma K, SST, M.E.</td>
-            <td>Provinsi Maluku Utara</td>
-          </tr>
-          <tr>
-            <td>40</td>
-            <td>Destrianto Mursalin, SST</td>
-            <td>Provinsi Papua Barat</td>
-          </tr>
-          <tr>
-            <td>41</td>
-            <td>Anis Khoirun Nisak, SST</td>
-            <td>Provinsi Papua</td>
-          </tr>
+          <thead>
+            <tr>
+              <td>No</td>
+              <td>Nama</td>
+              <td>Mewakili</td>
+              <td>Portofolio</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Dr. Eng. Lya Hulliyyatus Suadaa, SST., M.T.</td>
+              <td>Sekretariat Utama</td>
+              <td><a href="assets/portfolio/1.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Della Hardyati Prabowo, SST, M.E.</td>
+              <td>Kedeputian Bidang Metodologi dan Informasi Statistik</td>
+              <td><a href="assets/portfolio/2.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Suryo Adi Rakhmawan, SST, M.Sc.</td>
+              <td>Kedeputian Bidang Statistik Sosial</td>
+              <td><a href="assets/portfolio/3.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Ratna Rizki Amalia, SST, M.E.</td>
+              <td>Kedeputian Bidang Statistik Produksi</td>
+              <td><a href="assets/portfolio/4.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>Karmila Maharani, SST, M.E.</td>
+              <td>Kedeputian Bidang Statistik Distribusi dan Jasa</td>
+              <td><a href="assets/portfolio/5.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td>Ema Tusianti, SST, SAB, M.T., M.Sc</td>
+              <td>Kedeputian Bidang Neraca dan Analisis Statistik</td>
+              <td><a href="assets/portfolio/6.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td>Husaini, SST, M.Acc&nbsp;</td>
+              <td>Inspektorat Utama&nbsp;</td>
+              <td><a href="assets/portfolio/7.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td>Kusni Rohani Rumahorbo, SST, M.Si</td>
+              <td>Provinsi Aceh</td>
+              <td><a href="assets/portfolio/8.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>9</td>
+              <td>Deo Peter Surbakti, SST, M.Sc.</td>
+              <td>Provinsi Sumatera Utara</td>
+              <td><a href="assets/portfolio/9.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>Benny Firmansyah, SST, M.T.</td>
+              <td>Provinsi Sumatera Barat</td>
+              <td><a href="assets/portfolio/10.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>11</td>
+              <td>Debi Tomika, SST</td>
+              <td>Provinsi Riau</td>
+              <td><a href="assets/portfolio/11.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>12</td>
+              <td>Boy Ampristi, S.Tr.Stat.</td>
+              <td>Provinsi Jambi</td>
+              <td><a href="assets/portfolio/12.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>13</td>
+              <td>Etika Suryandari, S.Si., M.T.</td>
+              <td>Provinsi Sumatera Selatan</td>
+              <td><a href="assets/portfolio/13.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>14</td>
+              <td>Nofriani, SST</td>
+              <td>Provinsi Bengkulu</td>
+              <td><a href="assets/portfolio/14.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>15</td>
+              <td>Siectio Dicko Pratama, SST., M.Sc.</td>
+              <td>Provinsi Lampung</td>
+              <td><a href="assets/portfolio/15.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>16</td>
+              <td>Rengga Firmandika, SST</td>
+              <td>Provinsi Kep. Bangka Belitung </td>
+              <td><a href="assets/portfolio/16.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>17</td>
+              <td>Resa Surya Utama, SST, M.E</td>
+              <td>Provinsi Kepulauan Riau</td>
+              <td><a href="assets/portfolio/17.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>18</td>
+              <td>Mutiara Virgia Leran Putri, SST</td>
+              <td>Provinsi DKI Jakarta</td>
+              <td><a href="assets/portfolio/18.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>19</td>
+              <td>Andri Saleh, S.Si, M.I.Kom.</td>
+              <td>Provinsi Jawa Barat</td>
+              <td><a href="assets/portfolio/19.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>20</td>
+              <td>Hermawan Prasetyo, SST, MT.</td>
+              <td>Provinsi Jawa Tengah</td>
+              <td><a href="assets/portfolio/20.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>21</td>
+              <td>Betik Endaryati, SST</td>
+              <td>Provinsi DI Yogyakarta</td>
+              <td><a href="assets/portfolio/21.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>22</td>
+              <td>La Ode Ahmad Arafat, S.ST</td>
+              <td>Provinsi Jawa Timur</td>
+              <td><a href="assets/portfolio/22.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>23</td>
+              <td>Nur'izzah Inayati, SST, M.T&nbsp;</td>
+              <td>Provinsi Banten</td>
+              <td><a href="assets/portfolio/23.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>24</td>
+              <td>I Gede Heprin Prayasta, SST., M.Si.</td>
+              <td>Provinsi Bali</td>
+              <td><a href="assets/portfolio/24.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>25</td>
+              <td>Gede Aditya Yoga Sulaksana, SST</td>
+              <td>Provinsi Nusa Tenggara Barat</td>
+              <td><a href="assets/portfolio/25.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>26</td>
+              <td>Yuliana Kurniawati Dima, S.Si, M.AP</td>
+              <td>Provinsi Nusa Tenggara Timur</td>
+              <td><a href="assets/portfolio/26.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>27</td>
+              <td>Yostryan Chenata, SST&nbsp;</td>
+              <td>Provinsi Kalimantan Barat</td>
+              <td><a href="assets/portfolio/27.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>28</td>
+              <td>Aulia Fadyati Amini, SST</td>
+              <td>Provinsi Kalimantan Tengah</td>
+              <td><a href="assets/portfolio/28.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>29</td>
+              <td>Hakiki Sandhika Raja, S.Tr.Stat.</td>
+              <td>Provinsi Kalimantan Selatan</td>
+              <td><a href="assets/portfolio/29.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>30</td>
+              <td>Siswandi, S.E, M.M.</td>
+              <td>Provinsi Kalimantan Timur</td>
+              <td><a href="assets/portfolio/30.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>31</td>
+              <td>Muhammad Nurul Alam Hasyim, SST</td>
+              <td>Provinsi Kalimantan Utara</td>
+              <td><a href="assets/portfolio/31.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>32</td>
+              <td>Randy Pratama Lumenta, SST, M.A.P</td>
+              <td>Provinsi Sulawesi Utara</td>
+              <td><a href="assets/portfolio/32.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>33</td>
+              <td>A.A. Ngurah Gede Wasudewa, SST, M.URP.</td>
+              <td>Provinsi Sulawesi Tengah</td>
+              <td><a href="assets/portfolio/33.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>34</td>
+              <td>Rais, SST, M.Si.</td>
+              <td>Provinsi Sulawesi Selatan</td>
+              <td><a href="assets/portfolio/34.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>35</td>
+              <td>Ma'ruf, S.P</td>
+              <td>Provinsi Sulawesi Tenggara</td>
+              <td><a href="assets/portfolio/35.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>36</td>
+              <td>Khumaidi Subkhi, S.Tr.Stat.</td>
+              <td>Provinsi Gorontalo</td>
+              <td><a href="assets/portfolio/36.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>37</td>
+              <td>Andra Citta Passadhi Arya, SST, M.Stat</td>
+              <td>Provinsi Sulawesi Barat</td>
+              <td><a href="assets/portfolio/37.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>38</td>
+              <td>Lien Pattimukay, S.Si</td>
+              <td>Provinsi Maluku</td>
+              <td><a href="assets/portfolio/38.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>39</td>
+              <td>Habibullah Malik Ali Hadikusuma K, SST, M.E.</td>
+              <td>Provinsi Maluku Utara</td>
+              <td><a href="assets/portfolio/39.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>40</td>
+              <td>Destrianto Mursalin, SST</td>
+              <td>Provinsi Papua Barat</td>
+              <td><a href="assets/portfolio/40.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+            <tr>
+              <td>41</td>
+              <td>Anis Khoirun Nisak, SST</td>
+              <td>Provinsi Papua</td>
+              <td><a href="assets/portfolio/41.pdf"><center><i class="far fa-file-pdf"></i></center></a></td>
+            </tr>
+          </tbody>
         </table>
 
       </div>
@@ -408,7 +460,7 @@
               Aksi dipaparkan pada penjurian Tahap 2 dan Tahap 3. Berikut adalah rencana-rencana aksi para IST pada
               Tahap 3:
             </p>
-            <ul>
+            <ul data-aos="fade-up" data-aos-delay="100">
               <li>
                 <i>1</i>
                 <div>
