--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
 
           <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
-            <img src="assets/img/hero-img.png" class="img-fluid mb-3 mb-lg-0" alt="" style="border-radius: 10px;">
+            <img src="assets/img/hero-img.jpg" class="img-fluid mb-3 mb-lg-0" alt="" style="border-radius: 10px;">
           </div>
 
         </div>
@@ -600,7 +600,10 @@
               <li>
                 <i>10</i>
                 <div>
-                  <h5><a href='assets/renaksi/10.pdf' target='_blank'></a></h5>
+                  <h5><a href='assets/renaksi/10.pdf' target='_blank'>1. SiCaKep (Sistem Informasi Penilaian Capaian
+                      Kinerja Pegawai)
+                      2. STATIK (Sumatera Barat dalam Statistik) - New Version
+                      3. Garis Cerdas (Gagasan dan Rekomendasi Solusi Cerdas)</a></h5>
                   <p>Benny Firmansyah, SST, M.T.</p>
                 </div>
               </li>
@@ -608,16 +611,16 @@
                 <i>11</i>
                 <div>
                   <h5><a href='assets/renaksi/11.pdf' target='_blank'>Pelayanan Prima Didukung SDM yang Unggul (PPDS):
-                      1. Carano (Chatbot Integrasi Permintaan Data dan Konsultasi Statistik) 2. Sicakab (Sistem
-                      Informasi Desa Cinta Statistik Kabupaten) 3. Sicakep+ (Sistem Informasi Capaian Kinerja
-                      Pegawai+)</a></h5>
+                      1. Carano (Chatbot Integrasi Permintaan Data dan Konsultasi Statistik)
+                      2. Sicakab (Sistem Informasi Desa Cinta Statistik Kabupaten)
+                      3. Sicakep+ (Sistem Informasi Capaian Kinerja Pegawai+)</a></h5>
                   <p>Debi Tomika, SST</p>
                 </div>
               </li>
               <li>
                 <i>12</i>
                 <div>
-                  <h5><a href='assets/renaksi/12.pdf' target='_blank'></a></h5>
+                  <h5><a href='assets/renaksi/12.pdf' target='_blank'>Rumah Perubahan BPS</a></h5>
                   <p>Boy Ampristi, S.Tr.Stat.</p>
                 </div>
               </li>
@@ -714,14 +717,16 @@
               <li>
                 <i>24</i>
                 <div>
-                  <h5><a href='assets/renaksi/24.pdf' target='_blank'></a></h5>
+                  <h5><a href='assets/renaksi/24.pdf' target='_blank'>Statistics Centre for Policy Studies (SCPS) & Iam
+                      Able Chapter Bali</a></h5>
                   <p>I Gede Heprin Prayasta, SST., M.Si.</p>
                 </div>
               </li>
               <li>
                 <i>25</i>
                 <div>
-                  <h5><a href='assets/renaksi/25.pdf' target='_blank'></a></h5>
+                  <h5><a href='assets/renaksi/25.pdf' target='_blank'>Sepedaan (Survei Harga Perdesaan Dalam
+                      Genggaman)</a></h5>
                   <p>Gede Aditya Yoga Sulaksana, SST</p>
                 </div>
               </li>
@@ -738,7 +743,8 @@
               <li>
                 <i>27</i>
                 <div>
-                  <h5><a href='assets/renaksi/27.pdf' target='_blank'></a></h5>
+                  <h5><a href='assets/renaksi/27.pdf' target='_blank'>Si-Lem Kertas (Sistem Lembar Kerja Pendataan
+                      VHTS)</a></h5>
                   <p>Yostryan Chenata, SST </p>
                 </div>
               </li>
@@ -1104,6 +1110,9 @@
             <a href='https://youtu.be/9NSS4w6k0qU' class='glightbox pulsating-play-btn'></a>
             <p class='fst-italic text-center'>Habibullah Malik Ali Hadikusuma K, SST, M.E.</p>
           </div>
+          <div class='col-lg-2 position-relative align-self-start order-lg-last order-first' data-aos='fade-up'
+            data-aos-delay='200'>               
+          </div>
           <div class='col-lg-4 position-relative align-self-start order-lg-last order-first' data-aos='fade-up'
             data-aos-delay='200'>
             <img src='assets/v_promosi/40.jpg' class='img-fluid' alt=''>
@@ -1115,6 +1124,9 @@
             <img src='assets/v_promosi/41.jpg' class='img-fluid' alt=''>
             <a href='https://www.youtube.com/watch?v=YrE6CzjQj-w' class='glightbox pulsating-play-btn'></a>
             <p class='fst-italic text-center'>Anis Khoirun Nisak, SST</p>
+          </div>
+          <div class='col-lg-2 position-relative align-self-start order-lg-last order-first' data-aos='fade-up'
+            data-aos-delay='200'>               
           </div>
         </div><!-- Features Item -->
       </div>
