--- a/index.html
+++ b/index.html
@@ -536,8 +536,7 @@
               <li>
                 <i>2</i>
                 <div>
-                  <h5><a href='assets/renaksi/2.pdf' target='_blank'>Mewujudkan Insan Statistik yang BerAKHLAK untuk
-                      pembinaan statistik sektoral dan pelayanan publik yang lebih baik dan berkualitas.</a></h5>
+                  <h5><a href='assets/renaksi/2.pdf' target='_blank'>Pembinaan statistik sektoral dan pelayanan publik lebih baik dan lebih berkualitas.</a></h5>
                   <p>Della Hardyati Prabowo, SST, M.E.</p>
                 </div>
               </li>
